# kubectl-whoami

./: Cargo.toml  README.md
src/: main.rs
