[package]
name = "kubectl-whoami"
version = "0.1.0"
authors = ["Jiangge Zhang"]
edition = "2018"

[dependencies]
base64 = "0.11"
openssl = "0.10"
kube = "0.39.0"
kube-runtime = "0.39.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
tokio = { version = "0.2", features = ["full"] }
