[package]
name = "kubectl-whoami"
version = "0.1.0"
authors = ["Jiangge Zhang"]
edition = "2018"

[dependencies]
base64 = "0.21"
openssl = "0.10"
kube = "0.78.0"
kube-runtime = "0.78.0"
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_26"] }
tokio = { version = "1.24", features = ["full"] }
